# wordleqml

./: ButtonWordle.qml  CMakeLists.txt  FileReader.h  README.md  ToastMessage.qml  WordleConstants.js  WordleView.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  particles.html  resources.qrc
